made-up a mini-thai restaurant

--- a/about.html
+++ b/about.html
@@ -5,13 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
+    <!-- TODO: Navbar here --><nav>
+            <ul>
+                <li>
+                    <a href="index.html"> Home</a>
+                </li>
+                <li>
+                    <a href="menu.html">Menu</a>
+                </li>
+                <li>
+                    <a href="about.html"> About</a>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </li>
+            </ul>
+        </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner"> 
+        <img src="assets/images/banner.png" alt="banner logo">
+    </div>
     <main>
         <!-- About page code here -->
+        <h1> About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li> Cary, NC</li>
+            <li> Atlanta, GA</li>
+            <li> Buffalo, NY</li>
+            <li> Newyorkville, Ohio</li>
+        </ul>
+        <h2> Origin Story</h2>
+        <img src="assets/images/about.jpg" alt="About logo">
+        <p>North Carolina one of the places where you get the Opportunity to try New things, you get to work in a team, easy to Setupan activity. ...
+            It Teaches the “Serve First” Mindset.
+            An Avenue for Socialization.
+            Fast-Paced and Active.
+            It Comes With Incentives.
+            You Have Control as the Boss.</p>
     </main>
 </body>
 </html>
