--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- Remember to link to your CSS file! -->
 </head>
 <body>
+    <div>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html"> Home</a>
+                </li>
+                <li>
+                    <a href="menu.html">Menu</a>
+                </li>
+                <li>
+                    <a href="about.html"> About</a>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </li>
+            </ul>
+        </nav>
+    
     <!-- TODO: Banner Image here-->
+    <div id="banner"> 
+        <img src="assets/images/banner.png" alt="banner logo">
+    </div>
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,8 +42,14 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number: (202) 555-1234</strong> TBD
         </p>
+        <p>
+            <strong> Address: 2064 N Harrison Ave, Cary, NC 27513</strong>
+        </p>
+        <p>
+            <strong>Email:<a href="mailto:fake@email.com">fake@email.com</strong>
+            </p>
     </main>
 </body>
 </html>
