--- a/index.html
+++ b/index.html
@@ -9,10 +9,42 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <!-- TODO: NAV GOES HERE -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html"> Home</a>
+                </li>
+                <li>
+                    <a href="menu.html">Menu</a>
+                </li>
+                <li>
+                    <a href="about.html"> About</a>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </li>
+            </ul>
+        </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img src="assets/images/banner.png" alt="banner logo">
+    </div>
     <main>
-        <h1>H-Thai-ML</h1>
+        <h1>H-Thai-ML</h1>        
         <!-- TODO: Home page code here-->
+        <h2> Where every flavor tells a story</h2>
+    <div class="service">
+        <h3> Dine In</h3>
+    </div>
+    <div class="service">
+        <h3> Take Out</h3>
+    </div>    
+    <div class="service">
+        <h3> Delivery</h3>
+    </div>
+    <h2> We are here for you, come join us</h2>        
+    <img src="assets/images/table-in-restaurant.jpg" alt="Table in Restaurant">
     </main>
 </body>
 </html>
